# pabd_cv

./: Dockerfile  README.md  Results_CV.csv  pyproject.toml  requirements.txt
.dvc/: config
data/processed/: .gitignore
data/raw/: .gitignore
models/: .gitignore
notebooks/: colab_training.ipynb
output/: report.txt
services/: server_221234.py  service_221785.py
src/: evaluate.py  process_data.py  train.py  upload_model_s3.py
src/data/: process_data.py
src/models/: evaluate_model.py  train_model.py  upload_s3.py
test/: unittests.py
