[tool.poetry]
name = "pabd-cv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pabd_cv"}]

[tool.poetry.dependencies]
python = "~3.11"
tensorflow-io-gcs-filesystem = "0.31"
tensorflow = "^2.12.0"
pillow = "^9.5.0"
tk = "^0.1.0"
flask = "^2.3.2"
requests = "^2.30.0"
pylint = "^2.17.4"
dvc = "^2.56.0"
ipykernel = "^6.23.2"
boto3 = "^1.26.158"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
